<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Fit and fun</string>
    <!--SharedPreferences-->
    <string name="shared_preferences">CovidAppPref</string>
    <string name="ytKey" translatable="false">AIzaSyBS0tjiXkyNrWyBWlidoJ0l0mY9Fn6ZTY4</string>

    <!-- Main Activity   -->
    <string name="health_panel">Health</string>
    <string name="entertainment_panel">Entertainment</string>
    <string name="emergency_numbers_panel">Emergency numbers</string>
    <string name="settings_panel">Settings</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="login_longer">Login</string>
    <string name="log_in_to_account">Log in to your account</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="password_repeat">Repeat password</string>
    <string name="name">Name</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="new_here">New here?</string>
    <string name="register_longer">Register</string>
    <string name="register">Register</string>
    <string name="create_account">Create account</string>
    <string name="already_registered">Already registered?</string>
    <string name="not_verified">E-mail not verified</string>
    <string name="resend_mail">Resend e-mail</string>

    <!-- Health Activity   -->
    <string name="barchart_panel">Barcharts</string>
    <string name="exercises_set_panel">Exercises</string>
    <string name="add_data_panel">Add data</string>
    <string name="sleep_measuring_title">SLEEP</string>
    <string name="water_drunk_title">WATER</string>
    <string name="current_weight_title">WEIGHT</string>
    <string name="step_counter_title">STEPS</string>
    <string name="desired_weight_txt">Target weight:</string>
    <string name="desired_sleep_txt">Docelowa amount of sleep:</string>
    <string name="desired_water_txt">Target amount of \ndrunk water [ml]:</string>
    <string name="amount_for_add_data">AMOUNT</string>
    <string name="set_btn_for_add_data">SET</string>
    <string name="weight_title_barchart">Weight [kg]</string>
    <string name="steps_title_barchart">Steps</string>
    <string name="sleep_title_barchart">Sleep [min]</string>
    <string name="water_title_barchart">Water [ml]</string>



    <!-- Entertainment Activity   -->
    <string name="familial_games_panel">Familial games</string>
    <string name="director">Director</string>
    <string name="author">Author</string>
    <string name="ratings">Ratings</string>
    <string name="released">Release date</string>
    <string name="duration">Duration</string>
    <string name="pages">Pages</string>
    <string name="age">Age range</string>
    <string name="players">Number of players</string>
    <string name="time">Gameplay time</string>
    <string name="games">Games</string>
    <string name="films">Movies</string>
    <string name="books">Books</string>
    <string name="enable_notifications">Enable notifications</string>
    <string name="enable_sound">Enable sound</string>
    <string name="enable_vibrations">Enable vibrations</string>
    <string name="choose_time">Choose time</string>
    <string name="apply">Apply</string>
    <string name="num_of_books">Number of displayed books</string>
    <string name="num_of_films">Number of displayed films</string>
    <string name="film_sort_by">Sort films...</string>
    <string name="film_by_genre">By genres:</string>
    <string name="film_by_other">Other:</string>
    <string name="book_by_genre">Sort boks by genres:</string>
    <string name="time_picker">Time picker</string>
    <string name="genres">Genres:</string>
    <string name="minutes">minutes</string>
    <string name="description">Description</string>
    <string name="pdf">PDF availability:</string>
    <string name="num_of_votes">Number of votes:</string>
    <string name="where_to_get">Where to get?</string>
    <string name="no_data">No data</string>
    <string name="known_actors">Actors:</string>

    <!-- Common   -->
    <string name="preferences_panel">Preferences</string>
    <string name="notifications_settings_panel">Notification settings</string>
    <string name="dark_mode">Dark mode</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="save">Save</string>
    <string name="loading">Loading...</string>
    <string name="pick_date">PICK DATE</string>

    <!-- Film sorting methods -->
    <string-array name="film_other">
        <item>Top rated</item>
        <item>Most popular</item>
        <item>Upcoming</item>
        <item>Now playing</item>
    </string-array>

    <!-- Book genres -->
    <string-array name="book_genres" tools:ignore="InconsistentArrays">
        <item>drama</item>
        <item>fiction</item>
        <item>history</item>
        <item>art</item>
        <item>detective</item>
        <item>psychology</item>
        <item>medical</item>
        <item>biography</item>
        <item>poetry</item>
    </string-array>

    <string-array name="film_genres">
        <item>Action</item>
        <item>Animation</item>
        <item>Comedy</item>
        <item>Crime</item>
        <item>Documentary</item>
        <item>Drama</item>
        <item>Fantasy</item>
        <item>Family</item>
        <item>History</item>
        <item>Horror</item>
        <item>Music</item>
        <item>Mystery</item>
        <item>Romance</item>
        <item>Science Fiction</item>
        <item>Thriller</item>
        <item>TV Movie</item>
        <item>War</item>
        <item>Western</item>
    </string-array>
    <string name="recommended_movies_panel">Recommended movies</string>
    <string name="recommended_books_panel">Recommended books</string>
    <string name="firebase_users" translatable="false">users</string>
    <string name="firebase_health_data" translatable="false">health_data</string>
    <string name="firebase_weight" translatable="false">weight</string>
    <string name="firebase_steps" translatable="false">steps</string>
    <string name="firebase_sleep" translatable="false">sleep</string>
    <string name="firebase_water" translatable="false">water</string>
    <string name="cannot_add_more_than_2">Cannot add more than two yes</string>
    <string name="have_back_pain">Do your back hurt?</string>
    <string name="have_wrist_pain">Do your wrist hurt?</string>
    <string name="have_shoulder_pain">Do your shoulder hurt?</string>
    <string name="have_knees_pain">Do your knee hurt?</string>
    <string name="have_elbow_pain">Do your elbow hurt?</string>
    <string name="have_hips_pain">Do your hips hurt?</string>
    <string name="target_weight">Target weight [kg]:</string>
    <string name="target_steps">Target daily steps:</string>
    <string name="target_water">Target daily drinking water [ml]:</string>
    <string name="enable_notifications_exercises">Enable notifications exercises</string>
    <string name="enable_notifications_water">Enable notifications water</string>
    <string name="monday">MON</string>
    <string name="tuesday">TUE</string>
    <string name="wednesday">WED</string>
    <string name="thursday">THU</string>
    <string name="friday">FRI</string>
    <string name="saturday">SAT</string>
    <string name="sunday">SUN</string>
    <string name="_112">911</string>
    <string name="pogotowie_ratunkowe">Emergency medical services</string>
    <string name="straz_pozarna">Fire department</string>
    <string name="policja">Police</string>
    <string name="infolinia_glownego_inspektoratu_sanitarnego">Sanitary-epidemiological station hotline</string>
    <string name="number_112" translatable="false">tel:112</string>
    <string name="number_999" translatable="false">tel:999</string>
    <string name="number_998" translatable="false">tel:998</string>
    <string name="number_997" translatable="false">tel:997</string>
    <string name="number_sanepid" translatable="false">tel:222500115</string>
    <string name="hello">"Hello, "</string>
    <string name="hello_unknown">Hello, unknown</string>
    <string name="notification_entertainment_title">Chill time!</string>
    <string name="notification_entertainment_body">Shall we watch something?</string>
    <string name="criterias">Your password does not match one of the password criteria: \nlength >=8\nat least one uppercase letter\nat least one lowercase letter\nat least one digit</string>
    <string name="password_match">Provided passwords do not match</string>
    <string name="email_absent">You need to specify email</string>
    <string name="logged_in_success">Logged in successfully</string>
    <string name="steps_data_added">Steps data added</string>
    <string name="weight_data_added">Weight data added</string>
    <string name="sleep_data_added">Sleep data added</string>
    <string name="water_data_added">Water data added</string>
    <string name="settings_saved">Settings saved</string>
</resources>