<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/resendVerificationTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/not_verified"
        android:textColor="#8F0303"
        android:fontFamily="@font/aclonica"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.01"
        android:visibility="invisible"
        />

    <Button
        android:id="@+id/resendVerification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1"
        android:visibility="gone"
        android:text="@string/resend_mail"
        android:background="@drawable/button_gradient1"
        android:textColor="@android:color/white"
        />


    <TextView
        android:id="@+id/mainCuriositiesTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Hello World!"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1" />

    <Button
        android:id="@+id/healthBtn"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        app:layout_constraintVertical_bias="0.4"
        android:text="@string/health_panel"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/entertainmentBtn"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        app:layout_constraintVertical_bias="0.5"
        android:text="@string/entertainment_panel"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/emergencyNumbersBtn"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        app:layout_constraintVertical_bias="0.6"
        android:text="@string/emergency_numbers_panel"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/settingsBtn"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        app:layout_constraintVertical_bias="0.7"
        android:text="@string/settings_panel"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:onClick="logout"/>

    <Button
        android:id="@+id/english"
        android:layout_width="24pt"
        android:layout_height="15pt"
        app:layout_constraintVertical_bias="0.05"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/flag_britishjpg"
        android:visibility="gone"/>

    <Button
        android:id="@+id/polish"
        android:layout_width="24pt"
        android:layout_height="15pt"
        app:layout_constraintVertical_bias="0.05"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/flag_poland"/>


</androidx.constraintlayout.widget.ConstraintLayout>