<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="320dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingTop="40dp"
        android:paddingRight="20dp"
        android:paddingBottom="20dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="70dp">

        <androidx.constraintlayout.widget.Group
            android:id="@+id/waterGroupNoti"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="visible"
            app:constraint_referenced_ids="setTimeWaterBtn,setWaterNoti" />

        <Switch
            android:id="@+id/enableNotiWater"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="18dp"
            android:fontFamily="@font/aclonica"
            android:text="@string/enable_notifications_water"
            android:textAlignment="center"
            android:textColor="?attr/myTextColor"

            android:textSize="20dp"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

        <Button
            android:id="@+id/setTimeWaterBtn"
            android:layout_width="128dp"
            android:layout_height="64dp"
            android:layout_marginBottom="15dp"
            android:text="@string/choose_time" />

        <LinearLayout
            android:id="@+id/linearLayoutWater"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:id="@+id/buttonWaterDay1"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="40dp"
                android:layout_height="35dp"
                android:background="@drawable/button_not_pressed"
                android:text="@string/monday" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/buttonWaterDay2"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="40dp"
                android:layout_height="35dp"
                android:background="@drawable/button_not_pressed"
                android:text="@string/tuesday" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/buttonWaterDay3"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="40dp"
                android:layout_height="35dp"
                android:background="@drawable/button_not_pressed"
                android:text="@string/wednesday" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/buttonWaterDay4"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="40dp"
                android:layout_height="35dp"
                android:background="@drawable/button_not_pressed"
                android:text="@string/thursday" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/buttonWaterDay5"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="40dp"
                android:layout_height="35dp"
                android:background="@drawable/button_not_pressed"
                android:text="@string/friday" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/buttonWaterDay6"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="40dp"
                android:layout_height="35dp"
                android:background="@drawable/button_not_pressed"
                android:text="@string/saturday" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/buttonWaterDay7"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="40dp"
                android:layout_height="35dp"
                android:background="@drawable/button_not_pressed"
                android:text="@string/sunday" />
        </LinearLayout>


        <Button
            android:id="@+id/setWaterNoti"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set_btn_for_add_data" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="320dp"
        android:layout_marginTop="4dp"

        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingTop="40dp"
        android:paddingRight="20dp"
        android:paddingBottom="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

        <Switch
            android:id="@+id/enableNotiExercises"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="18dp"
            android:fontFamily="@font/aclonica"
            android:text="@string/enable_notifications_exercises"
            android:textAlignment="center"
            android:textColor="?attr/myTextColor"

            android:textSize="20dp"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

        <Button
            android:id="@+id/setTimeExercBtn"
            android:layout_width="128dp"
            android:layout_height="64dp"
            android:layout_marginBottom="15dp"
            android:text="@string/choose_time" />

        <LinearLayout
            android:id="@+id/linearLayoutExercise"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:id="@+id/buttonExerDay1"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="40dp"
                android:layout_height="35dp"
                android:background="@drawable/button_not_pressed"
                android:text="@string/monday" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/buttonExerDay2"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="40dp"
                android:layout_height="35dp"
                android:background="@drawable/button_not_pressed"
                android:text="@string/tuesday" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/buttonExerDay3"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="40dp"
                android:layout_height="35dp"
                android:background="@drawable/button_not_pressed"
                android:text="@string/wednesday" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/buttonExerDay4"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="40dp"
                android:layout_height="35dp"
                android:background="@drawable/button_not_pressed"
                android:text="@string/thursday" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/buttonExerDay5"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="40dp"
                android:layout_height="35dp"
                android:background="@drawable/button_not_pressed"
                android:text="@string/friday" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/buttonExerDay6"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="40dp"
                android:layout_height="35dp"
                android:background="@drawable/button_not_pressed"
                android:text="@string/saturday" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/buttonExerDay7"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="40dp"
                android:layout_height="35dp"
                android:background="@drawable/button_not_pressed"
                android:text="@string/sunday" />
        </LinearLayout>


        <Button
            android:id="@+id/setNotiExer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set_btn_for_add_data" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>