<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".entertainment.FilmDetailsActivity">

    <RatingBar
        android:id="@+id/ratingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/detailedTitle"
        android:layout_centerHorizontal="true"
        android:isIndicator="true"
        android:numStars="5" />

    <TextView
        android:id="@+id/detailedTitle"
        android:textSize="30sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/detailedRatingsCountTxt"
        android:textSize="15sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/ratingBar"
        android:layout_toStartOf="@id/detailedRatingsCount"
        android:text="@string/num_of_votes" />

    <TextView
        android:id="@+id/detailedRatingsCount"
        android:textSize="15sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/ratingBar"
        android:layout_alignParentEnd="true" />

    <TextView
        android:id="@+id/detailedDescriptionTxt"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/detailedRatingsCount"
        android:layout_marginTop="20dp"
        android:layout_centerVertical="true"
        android:text="@string/description" />

    <TextView
        android:id="@+id/detailedDescription"
        android:textSize="15sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/detailedDescriptionTxt"
        android:layout_marginTop="10sp"
        android:layout_centerVertical="true" />

    <TextView
        android:id="@+id/detailedActorsTxt"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/detailedDescription"
        android:layout_marginTop="20dp"
        android:layout_alignParentStart="true"
        android:text="@string/known_actors" />

    <ListView
        android:id="@+id/detailedActors"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/detailedActorsTxt"
        android:clickable="false"/>
</RelativeLayout>